feat: implemented project service and category filtering